--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "apexcharts": "^3.27.3",
-    "bootstrap": "^5.0.2",
+    "bootstrap": "^5.1.3",
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
-    "react-bootstrap": "^2.0.0-beta.4",
+    "react-bootstrap": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
